sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:20: error: 'while' expected but '}' found.
  } while (hadInversed)
  ^AlgCocktailSort1:20: error: ';' expected but 'while' found.
  } while (hadInversed)
    ^AlgCocktailSort1:24: error: Unmatched closing brace '}' ignored here
}
^